--- a/app/src/main/res/layout/settings_tab_menu.xml
+++ b/app/src/main/res/layout/settings_tab_menu.xml
@@ -7,24 +7,9 @@
     android:layout_height="match_parent"
     tools:context=".TabMenuActivity$PlaceholderFragment">
 
-    <!--<TextView-->
-    <!--android:id="@+id/section_label"-->
-    <!--android:layout_width="wrap_content"-->
-    <!--android:layout_height="wrap_content"-->
-    <!--android:layout_marginBottom="@dimen/activity_vertical_margin"-->
-    <!--android:layout_marginEnd="@dimen/activity_horizontal_margin"-->
-    <!--android:layout_marginStart="@dimen/activity_horizontal_margin"-->
-    <!--android:layout_marginTop="@dimen/activity_vertical_margin"-->
-    <!--app:layout_constraintLeft_toLeftOf="parent"-->
-    <!--app:layout_constraintTop_toTopOf="@+id/constraintLayout"-->
-    <!--tools:layout_constraintLeft_creator="1"-->
-    <!--tools:layout_constraintTop_creator="1"-->
-    <!--android:text= "Settings"/>-->
-
-
     <LinearLayout
-        android:layout_width="368dp"
-        android:layout_height="495dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -36,18 +21,18 @@
             android:id="@+id/button6"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="CHANGE PASSWORD" />
+            android:text="@string/changePasswordBttn" />
 
         <Button
             android:id="@+id/button7"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Button" />
+            android:text="@string/setting1" />
 
         <Button
             android:id="@+id/button8"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Button" />
+            android:text="@string/setting1" />
     </LinearLayout>
 </android.support.constraint.ConstraintLayout>
