--- a/app/src/main/res/layout/settings_tab_menu.xml
+++ b/app/src/main/res/layout/settings_tab_menu.xml
@@ -8,6 +8,7 @@
     tools:context=".TabMenuActivity$PlaceholderFragment">
 
     <LinearLayout
+        android:id="@+id/layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
@@ -18,7 +19,7 @@
 
 
         <Button
-            android:id="@+id/button6"
+            android:id="@+id/changePass"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/changePasswordBttn" />
