--- a/app/src/main/res/layout/settings_tab_menu.xml
+++ b/app/src/main/res/layout/settings_tab_menu.xml
@@ -24,6 +24,12 @@
             android:layout_height="wrap_content"
             android:text="@string/changePasswordBttn" />
 
+        <ToggleButton
+            android:id="@+id/toggleButton"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="ToggleButton" />
+
         <Button
             android:id="@+id/button7"
             android:layout_width="match_parent"
@@ -35,5 +41,6 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/setting1" />
+
     </LinearLayout>
 </android.support.constraint.ConstraintLayout>
