--- a/app/src/main/res/layout/settings_tab_menu.xml
+++ b/app/src/main/res/layout/settings_tab_menu.xml
@@ -28,7 +28,7 @@
             android:id="@+id/toggleButton"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="ToggleButton" />
+            android:text="@string/changeTheme" />
 
         <Button
             android:id="@+id/button7"
