--- a/app/src/main/res/layout/settings_tab_menu.xml
+++ b/app/src/main/res/layout/settings_tab_menu.xml
@@ -25,7 +25,7 @@
             android:text="@string/changePasswordBttn" />
 
         <ToggleButton
-            android:id="@+id/toggleButton"
+            android:id="@+id/themeBttn"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/changeTheme" />
