--- a/app/src/main/res/layout/activity_tab_menu.xml
+++ b/app/src/main/res/layout/activity_tab_menu.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context=".TabMenuActivity">
+    tools:context="AppView.TabMenuActivity">
 
     <android.support.design.widget.AppBarLayout
         android:id="@+id/appbar"
