--- a/app/src/main/res/layout/activity_change_password.xml
+++ b/app/src/main/res/layout/activity_change_password.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="AppView.changePasswordActivity">
+    tools:context="appView.changePasswordActivity">
 
     <EditText
         android:id="@+id/oldPassword"
