--- a/app/src/main/res/layout/profil_tab_menu.xml
+++ b/app/src/main/res/layout/profil_tab_menu.xml
@@ -27,7 +27,7 @@
             android:orientation="vertical">
 
             <!--<TextView-->
-            <!--android:id="@+id/profil"-->
+            <!--android:id="@+id/profile"-->
             <!--android:layout_width="match_parent"-->
             <!--android:layout_height="match_parent"-->
             <!--android:textAlignment="center"-->
