--- a/app/src/main/res/layout/activity_end_game.xml
+++ b/app/src/main/res/layout/activity_end_game.xml
@@ -51,14 +51,14 @@
                 android:id="@+id/repeatGame"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:onClick="repeatBttn"
+                android:onClick="repeatButton"
                 android:text="@string/repeatGame" />
 
             <Button
                 android:id="@+id/backToMenu"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:onClick="backBttn"
+                android:onClick="backButton"
                 android:text="@string/backMenu" />
 
         </LinearLayout>
