adding Image to database. Do not touch this commit

--- a/app/src/main/res/layout/profil_tab_menu.xml
+++ b/app/src/main/res/layout/profil_tab_menu.xml
@@ -50,6 +50,17 @@
             android:layout_weight="1"
             android:orientation="vertical">
 
+            <Button
+                android:id="@+id/button3"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Button" />
+
+            <Button
+                android:id="@+id/button4"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Button" />
         </LinearLayout>
 
     </LinearLayout>
