minor changes in profile and settings Activities

--- a/app/src/main/res/layout/settings_tab_menu.xml
+++ b/app/src/main/res/layout/settings_tab_menu.xml
@@ -31,10 +31,10 @@
             android:text="@string/changeTheme" />
 
         <Button
-            android:id="@+id/button7"
+            android:id="@+id/changeAvatar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/setting1" />
+            android:text="@string/change_avatar" />
 
         <Button
             android:id="@+id/button8"
