--- a/app/src/main/res/layout/content_profil_tab_menu.xml
+++ b/app/src/main/res/layout/content_profil_tab_menu.xml
@@ -14,6 +14,15 @@
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
+        <TextView
+            android:id="@+id/textView3"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/your_items"
+            android:textAlignment="center"
+            android:textSize="28sp"
+            android:textStyle="bold" />
+
         <LinearLayout
              android:layout_width="match_parent"
              android:layout_height="match_parent"
