--- a/app/src/main/res/layout/profil_tab_menu.xml
+++ b/app/src/main/res/layout/profil_tab_menu.xml
@@ -83,22 +83,64 @@
             android:orientation="vertical">
 
             <TextView
-                android:id="@+id/stats"
+                android:id="@+id/textView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/stats"
+                android:textAlignment="center"
+                android:textSize="28sp"
+                android:textStyle="bold" />
+
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_weight="0.9"
-                android:lines="2"
-                android:maxLines="4"
-                android:singleLine="false"
-                android:textSize="16sp"
-                tools:ignore="NestedWeights" />
+                android:orientation="horizontal"
+                tools:ignore="NestedWeights"
+                android:padding="10dp">
 
-            <Button
-                android:id="@+id/highscore"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="bottom|end"
-                android:text="@string/highscore" />
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:orientation="vertical" >
+
+                    <TextView
+                        android:id="@+id/levelLabel"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="@string/level"
+                        android:textAlignment="center"
+                        android:textSize="20sp" />
+
+                    <TextView
+                        android:id="@+id/level"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:textAlignment="center"
+                        android:textSize="40sp"
+                        android:textStyle="bold" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:id="@+id/missPoints"
+                        android:layout_width="wrap_content"
+                        android:layout_height="0dp"
+                        android:layout_weight="0.9"/>
+
+                    <Button
+                        android:id="@+id/highscore"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="bottom|end"
+                        android:text="@string/highscore" />
+                </LinearLayout>
+
+            </LinearLayout>
 
         </LinearLayout>
 
