--- a/app/src/main/res/layout/profil_tab_menu.xml
+++ b/app/src/main/res/layout/profil_tab_menu.xml
@@ -179,6 +179,7 @@
 
     </LinearLayout>
 
+    <!--TODO dopasować kolorystyke-->
     <LinearLayout
         android:id="@+id/itemInfo"
         android:layout_width="match_parent"
