profile margin added

--- a/app/src/main/res/layout/profil_tab_menu.xml
+++ b/app/src/main/res/layout/profil_tab_menu.xml
@@ -106,7 +106,7 @@
                 <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
-                    android:padding="5dp"
+                    android:layout_margin="5dp"
                     android:orientation="vertical">
 
                     <TextView
@@ -129,6 +129,7 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
+                    android:layout_marginStart="5dp"
                     android:orientation="vertical">
 
                     <TextView
